<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
	
    <string name="app_name">WellTrak</string>
	
	<string name="cancel">Cancel</string>
	<string name="ok">Ok </string>
	
	<string name="wl_btnNewWell">New Well</string>

	<string name="wd_etName">Name</string>
	<string name="wd_etAddress">Address</string>
	<string name="wd_btnUpdateWell">Update Well</string>
	
	<string name="nw_etName">Name</string>
	<string name="nw_etPwsid">PWSID</string>
	<string name="nw_etLocation">Location</string>
	
	<string name="name_blank">Well name can\'t be blank</string>
	<string name="add_fail">Failed to add well</string>
	<string name="add_success">Successfully added well</string>
	
	<string name="vi_tvFm">FM:</string>
	<string name="vi_tvFrcPoe">FRC POE:</string>
	<string name="vi_tvFrcPou">FRC POU:</string>
	<string name="vi_tvPh">pH:</string>
	
	<string name="vd_etFlowMeter">Flow Meter Reading</string>
	<string name="vd_etEntryChlorine">Chlorine Residual at Point of Entry</string>
	<string name="vd_etRemoteChlorine">Chlorine Residual at Point of Use</string>
	<string name="vd_btnUpdateVisit">Update Visit</string>
	
	<string-array name="menu">
		<item>Edit</item>
		<item>Delete</item>
		<item>Send</item>
	</string-array>
	
	<string-array name="countries">
		<item>Sweden</item>
		<item>Norway</item>
		<item>Finland</item>
		<item>Denmark</item>
		<item>Germany</item>
		<item>Poland</item>
		<item>Netherlands</item>
		<item>Belgium</item>
	</string-array>
</resources>
