<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/nw_etName"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:id="@+id/nw_tvName"/>

	<EditText
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_width="match_parent"
		android:layout_below="@id/nw_tvName"
		android:id="@+id/nw_etName"/>

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/nw_etPwsid"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:layout_below="@id/nw_etName"
		android:id="@+id/nw_tvPwsid"/>

	<EditText
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_width="match_parent"
		android:layout_below="@id/nw_tvPwsid"
		android:id="@+id/nw_etPwsid"/>

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/nw_etLocation"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:layout_below="@id/nw_etPwsid"
		android:id="@+id/nw_tvLocation"/>

	<EditText
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_width="match_parent"
		android:layout_below="@id/nw_tvLocation"
		android:id="@+id/nw_etLocation"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:layout_alignParentBottom="true">

		<Button
			android:layout_height="wrap_content"
			android:text="@string/cancel"
			android:layout_width="0dp"
			android:layout_weight="1.0"
			android:id="@+id/nw_btnCancel"/>

		<Button
			android:layout_height="wrap_content"
			android:text="@string/ok"
			android:layout_width="0dp"
			android:layout_weight="1.0"
			android:id="@+id/nw_btnOk"/>

	</LinearLayout>

</RelativeLayout>

