<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<DatePicker
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:calendarViewShown="false"
		android:id="@+id/vd_dpDate"/>

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/vd_etFlowMeter"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:layout_below="@id/vd_dpDate"
		android:id="@+id/vd_tvFlowMeter"
		android:layout_marginTop="@dimen/text_margin"
		android:layout_marginLeft="@dimen/text_margin"/>

	<EditText
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_width="match_parent"
		android:id="@+id/vd_etFlowMeter"
		android:imeOptions="actionNext"
		android:inputType="number"
		android:layout_below="@id/vd_tvFlowMeter"/>

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/vd_etEntryChlorine"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:layout_below="@id/vd_etFlowMeter"
		android:id="@+id/vd_tvEntryChlorine"
		android:layout_marginLeft="@dimen/text_margin"/>

	<EditText
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_width="match_parent"
		android:id="@+id/vd_etEntryChlorine"
		android:imeOptions="actionNext"
		android:inputType="numberDecimal"
		android:layout_below="@id/vd_tvEntryChlorine"/>

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/vd_etRemoteChlorine"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:layout_below="@id/vd_etEntryChlorine"
		android:id="@+id/vd_tvRemoteChlorine"
		android:layout_marginLeft="@dimen/text_margin"/>

	<EditText
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_width="match_parent"
		android:id="@+id/vd_etRemoteChlorine"
		android:imeOptions="actionDone"
		android:inputType="numberDecimal"
		android:layout_below="@id/vd_tvRemoteChlorine"/>

	<Button
		android:layout_height="wrap_content"
		android:text="@string/vd_btnUpdateVisit"
		android:layout_width="match_parent"
		android:id="@+id/vd_btnUpdateVisit"
		android:layout_alignParentBottom="true"/>

</RelativeLayout>

