<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="yyyy-MM-dddd"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:id="@+id/vi_tvDate"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/vi_tvFm"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content"
			android:layout_weight="0.1"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="123456"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_weight="0.9"
			android:id="@+id/vi_tvDate"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/vi_tvFrcPoe"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content"
			android:layout_weight="0.2"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="0.00"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_weight="0.3"
			android:id="@+id/vi_tvFrcPoe"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/vi_tvFrcPou"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content"
			android:layout_weight="0.2"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="0.00"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_weight="0.3"
			android:id="@+id/vi_tvFrcPou"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/vi_tvPh"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content"
			android:layout_weight="0.2"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="0.00"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_weight="0.3"
			android:id="@+id/vi_tvPh"/>

		<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_weight="0.5"/>

	</LinearLayout>

</LinearLayout>

